prevent button from disabling at end of carousel, set button visibility to hidden, set thumbs visibility to initial\!important

--- a/src/FlashCardTest.scss
+++ b/src/FlashCardTest.scss
@@ -1,3 +1,11 @@
 #carouselContainer{
 	max-width: 200px;
 }
+
+.buttonNext{
+	visibility: hidden;
+}
+
+.thumbs{
+	visibility: initial!important;
+}
